<resources>
    <string name="app_name">AMK8PTA</string>
    <!--Get Started-->
    <string name="str_getstart">Get Started</string>

    <!--Login-->
    <string name="str_login">Login</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_forgot">Forgot Password ?</string>
    <string name="str_dont">Do not have an Account?</string>
    <string name="str_register">Register</string>
    <string name="str_firstname">First Name</string>
    <string name="str_lastname">Last Name</string>
    <string name="str_phone">Mobile No.</string>
    <string name="str_conpassword">Confirm Password</string>
    <string name="str_alreadyacc">Already Have An Account?</string>

    <!--Errors-->
    <string name="time_our_error">Time out.</string>
    <string name="can_not_connect">No Internet Connection Available.</string>
    <string name="auth_fail">Authentication Failed.</string>
    <string name="server_error">Server error.</string>
    <string name="netwotk_error">Unable to connect with network.</string>
    <string name="parser_error">Parse error.</string>
    <string name="unknow_error_txt">Unknown Error.</string>
    <string name="type_a_message">Type a message</string>
    <string name="title_activity__view__profile">Activity_View_Profile</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="hint_view_message">View Message</string>
    <string name="processing">Processing...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="mis_permission_rationale_write_storage">Storage write permission is needed to save the image.</string>
    <string name="mis_permission_rationale">Storage read permission is needed to pick files.</string>
    <string name="mis_folder_all">All Images</string>
    <string name="mis_preview">Preview</string>
    <string name="mis_msg_no_camera">No system camera found</string>
    <string name="mis_msg_amount_limit">Select images amount is limit</string>
    <string name="mis_action_done">Done</string>
    <string name="mis_action_button_string">%1$s(%2$d/%3$d)</string>
    <string name="mis_photo_unit">Shot</string>
    <string name="mis_tip_take_photo">Take photo</string>
    <string name="mis_error_image_not_exist">Image error</string>
    <string name="mis_error_no_permission">Has no permission</string>
    <string name="mis_permission_dialog_title">Permission Deny</string>
    <string name="mis_permission_dialog_ok">OK</string>
    <string name="mis_permission_dialog_cancel">CANCEL</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_message">Message Board</string>
    <string name="title_events">Events</string>
    <string name="title_chat">Chat</string>

    <!--Navigation drawer-->
    <string name="nav_home">Home</string>
    <string name="nav_emergency">Emergency</string>
    <string name="nav_logout">Logout</string>


    <!--Navigation drawer Menu User-->
    <string name="nav_my_tasks">My Tasks</string>
    <string name="nav_payment_hoistory">Payment History</string>
    <string name="nav_favourites">Favourites</string>
    <string name="nav_message">Messages</string>
    <string name="nav_change_pass">Change Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_message">Messages</string>
    <string name="action_list">List</string>
    <string name="action_map">Map</string>

    <!--Forgot Password-->
    <string name="str_enteremail">Enter Your Email ID</string>
    <string name="str_submit">Submit</string>
    <string name="str_cancle">Cancel</string>


</resources>
