<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/home"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_navigation"
            android:title="@string/nav_home" />

    </group>
    <group
        android:id="@+id/message"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/message_board_navigation"
            android:title="@string/title_message" />

    </group>
    <group
        android:id="@+id/events"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/events_navigation"
            android:title="@string/title_events" />

    </group>
    <group
        android:id="@+id/chat"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/chat_navigation"
            android:title="@string/title_chat" />

    </group>
    <group
        android:id="@+id/emergency"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_emergency"

            android:icon="@drawable/emergency_navigation"
            android:title="@string/nav_emergency" />

    </group>
    <group
        android:id="@+id/logout"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout_navigation"
            android:title="@string/nav_logout" />

    </group>




</menu>
