<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/dimens_100dp"
            android:layout_height="@dimen/dimens_100dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_splash" />

        <TextView
            android:id="@+id/tv_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:text="@string/str_register"
            android:textAllCaps="true"
            android:textColor="@color/green"
            android:textSize="@dimen/text_20" />

        <EditText
            android:id="@+id/et_firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/text_20"
            android:layout_marginRight="@dimen/text_20"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:background="@drawable/bg_textbox"
            android:drawablePadding="@dimen/dimens_20dp"
            android:hint="@string/str_firstname"
            android:paddingLeft="@dimen/dimens_10dp"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />

        <EditText
            android:id="@+id/et_lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/text_20"
            android:layout_marginRight="@dimen/text_20"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:background="@drawable/bg_textbox"
            android:drawablePadding="@dimen/dimens_20dp"
            android:hint="@string/str_lastname"
            android:paddingLeft="@dimen/dimens_10dp"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_you"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/text_20"
            android:layout_marginRight="@dimen/text_20"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:background="@drawable/bg_textbox"
            android:drawablePadding="@dimen/dimens_20dp"
            android:hint="@string/str_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/dimens_10dp"

            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />

        <EditText
            android:id="@+id/et_mobileNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_you"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/text_20"
            android:layout_marginRight="@dimen/text_20"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:background="@drawable/bg_textbox"
            android:drawablePadding="@dimen/dimens_20dp"
            android:hint="@string/str_phone"
            android:inputType="number"
            android:paddingLeft="@dimen/dimens_10dp"

            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />


        <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_email"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/text_20"
            android:layout_marginRight="@dimen/text_20"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:background="@drawable/bg_textbox"
            android:drawablePadding="@dimen/dimens_20dp"
            android:hint="@string/str_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/dimens_10dp"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"

            android:textColorHint="@color/colorWhite" />

        <EditText
            android:id="@+id/et_confirmpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_email"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/text_20"
            android:layout_marginRight="@dimen/text_20"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:background="@drawable/bg_textbox"
            android:drawablePadding="@dimen/dimens_20dp"
            android:hint="@string/str_conpassword"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/dimens_10dp"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"

            android:textColorHint="@color/colorWhite" />


        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/text_20"
            android:layout_marginRight="@dimen/text_20"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:background="@drawable/button_login"
            android:text="@string/str_register"
            android:textColor="@color/colorWhite" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dontaccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_user"

                android:layout_margin="@dimen/dimens_10dp"
                android:text="@string/str_alreadyacc"

                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_16dp" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_user"
                android:layout_marginTop="@dimen/dimens_10dp"

                android:text="@string/str_login"

                android:textColor="@color/green"
                android:textSize="@dimen/text_size_16dp" />


        </LinearLayout>


    </LinearLayout>
</ScrollView>